New files and Div&anchor Tags added

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Kitchen-Khavayye</title>
+    <title>kitchen-Khavayye</title>
 </head>
 <body>
-    <h1>Kitchen-Khavayye</h1>
+    <div>
+        <h1>
+           <img src="./img/chef.png" height="100px"
+           width="100px"> Kichen-Khavayye</h1>
+        <div>
+            <a href="./index.html">Home</a>
+            <a href="./pages/menu.html">menu</a>
+            <a href="./pages/contact.html">contact</a>
+        </div>
+        </div>
 </body>
 </html>
+    
