--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
     <div>
         <h1>
            <img src="./img/chef.png" height="100px"
-           width="100px"> Kichen-Khavayye</h1>
+           width="100px"> Kichen-Khavayye</h1><br/><hr/>
         <div>
-            <a href="./index.html">Home</a>
-            <a href="./pages/menu.html">menu</a>
+            <a href="./index.html">Home</a>&nbsp;&nbsp;&nbsp;
+            <a href="./pages/menu.html">menu</a>&nbsp;&nbsp;&nbsp;
             <a href="./pages/contact.html">contact</a>
         </div>
+        </div>
+        <br/><hr/>
+        <div>
+            <div>
+                <img src="./Img/photorealistic-lohri-festival-celebration-with-traditional-food.jpg"
+                   height="400px" width="800px"/>
+            </div>
         </div>
 </body>
 </html>
