Paragraph Tag & Class added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>kitchen-Khavayye</title>
+    <link href="./css/home1.css" rel="stylesheet">
 </head>
 <body>
     <div>
@@ -15,10 +16,15 @@
         </div>
         </div>
         <br/><hr/>
-        <div>
+        <div class="flexhome">
             <div>
                 <img src="./Img/photorealistic-lohri-festival-celebration-with-traditional-food.jpg"
-                   height="400px" width="800px"/>
+                   height="400px" width="800px" class="img"/>
+            </div>
+            <div class="div">
+                <h2>Enjoy the foods.......</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis similique amet labore dolorum laborum, voluptates inventore consequatur molestiae veniam praesentium possimus corrupti sed quod dicta facilis. Ea aliquid rerum praesentium.</p>
+                 <button>Order Foods</button>
             </div>
         </div>
 </body>
