Menus card added

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                    height="400px" width="800px" class="img"/>
             </div>
             <div class="div">
-                <h2>Enjoy the foods.......</h2>
+                <h2>Enjoy the foods.......<img src="./Img/delicious.png" height="70px" width="77px"/></h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis similique amet labore dolorum laborum, voluptates inventore consequatur molestiae veniam praesentium possimus corrupti sed quod dicta facilis. Ea aliquid rerum praesentium.</p>
-                 <button>Order Foods</button>
+                 <a href="./pages/menu.html"><button class="order">Order Foods</button></a>
             </div>
         </div>
 </body>
