--- a/pages/menu.html
+++ b/pages/menu.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Menu</title>
+    <link rel="stylesheet" href="./../css/menu.css"/>
 </head>
 <body>
     <div>
@@ -13,6 +14,120 @@
             <a href="./../pages/menu.html">menu</a>
             <a href="./../pages/contact.html">contact</a>
         </div>
-        </div>
-</body>
-</html>
+        </div><div>
+            <h1>Menus.....</h1>
+            <div class="menu-card">
+                <img src="./../Img/aamras.png" class="food-img"/>
+                <p>
+                 Aamras
+                </p>
+                <p>
+                    <b>price:</b>&nbsp;<del>190/-</del>&nbsp;&nbsp;&nbsp;
+                    100/-
+                </p>
+                <button class="btn orderbtn">Order To Food</button>
+            </div>
+            <div class="menu-card">
+                <img src="./../Img/bhakawadi.png" class="food-img"/>
+                <p>
+                 Bhakarwadi
+                </p>
+                <p>
+                    <b>price:</b>&nbsp;<del>230/-</del>&nbsp;&nbsp;&nbsp;
+                    150/-
+                </p>
+                <button class="btn">Order To Food</button>
+            </div>
+            <div class="menu-card">
+                <img src="./../Img/amti.png" class="food-img"/>
+                <p>
+                 Amti
+                </p>
+                <p>
+                    <b>price:</b>&nbsp;<del>180/-</del>&nbsp;&nbsp;&nbsp;
+                    120/-
+                </p>
+                <button class="btn">Order To Food</button>
+            </div>
+            <div class="menu-card">
+                <img src="./../Img/k6.png" class="food-img"/>
+                <p>
+                 Puranpoli
+                </p>
+                <p>
+                    <b>price:</b>&nbsp;<del>200/-</del>&nbsp;&nbsp;&nbsp;
+                    100/-
+                </p>
+                <button class="btn">Order To Food</button>
+            </div>
+            <div class="menu-card">
+                <img src="./../Img/food1.png.jpg" class="food-img"/>
+                <p>
+                 Kanda Bhaji
+                </p>
+                <p>
+                    <b>price:</b>&nbsp;<del>90/-</del>&nbsp;&nbsp;&nbsp;
+                    60/-
+                </p>
+                <button class="btn">Order To Food</button>
+            </div>
+            <div class="menu-card">
+                <img src="./../Img/samosa.png.jpg" class="food-img"/>
+                <p>
+                 Samosa
+                </p>
+                <p>
+                    <b>price:</b>&nbsp;<del>70/-</del>&nbsp;&nbsp;&nbsp;
+                    40/-
+                </p>
+                <button class="btn">Order To Food</button>
+            </div>
+            <div class="menu-card">
+                <img src="./../Img/poha.png" class="food-img"/>
+                <p>
+                 Poha
+                </p>
+                <p>
+                    <b>price:</b>&nbsp;<del>100/-</del>&nbsp;&nbsp;&nbsp;
+                    80/-
+                </p>
+                <button class="btn">Order To Food</button>
+            </div>
+            <div class="menu-card">
+                <img src="./../Img/vangi-bhaji.png" class="food-img"/>
+                <p>
+                 vangi-bhaji
+                </p>
+                <p>
+                    <b>price:</b>&nbsp;<del>80/-</del>&nbsp;&nbsp;&nbsp;
+                    60/-
+                </p>
+                <button class="btn">Order To Food</button>
+            </div>
+            <div class="menu-card">
+                <img src="./../Img/varan-bhaat.png" class="food-img"/>
+                <p>
+                 Varan-Bhaat
+                </p>
+                <p>
+                    <b>price:</b>&nbsp;<del>120/-</del>&nbsp;&nbsp;&nbsp;
+                    100/-
+                </p>
+                <button class="btn">Order To Food</button>
+            </div>
+            <div class="menu-card">
+                <img src="./../Img/k8.png" class="food-img"/>
+                <p>
+                 PavBhaji
+                </p>
+                <p>
+                    <b>price:</b>&nbsp;<del>180/-</del>&nbsp;&nbsp;&nbsp;
+                    150/-
+                </p>
+                <button class="btn">Order To Food</button>
+            </div>
+            </div>
+        </body>
+        </html>
+ </body>
+ </html>
