Whitespace and Justify-content added

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <title>kitchen-Khavayye</title>
     <link href="./css/home1.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
     <div>
-        <h1>
+        <h1 class="heading">
            <img src="./img/chef.png" height="100px"
            width="100px"> Kichen-Khavayye</h1><br/><hr/>
-        <div>
-            <a href="./index.html">Home</a>&nbsp;&nbsp;&nbsp;
-            <a href="./pages/menu.html">menu</a>&nbsp;&nbsp;&nbsp;
-            <a href="./pages/contact.html">contact</a>
+        <div class="just1">
+            <a href="./index.html"><b>Home</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="./pages/menu.html"><b>menu</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="./pages/contact.html"><b>contact</b></a>
         </div>
         </div>
         <br/><hr/>
@@ -23,7 +24,7 @@
             </div>
             <div class="div">
                 <h2>Enjoy the foods.......<img src="./Img/delicious.png" height="70px" width="77px"/></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis similique amet labore dolorum laborum, voluptates inventore consequatur molestiae veniam praesentium possimus corrupti sed quod dicta facilis. Ea aliquid rerum praesentium.</p>
+                <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis similique amet labore dolorum laborum, voluptates inventore consequatur molestiae veniam praesentium possimus corrupti sed quod dicta facilis. Ea aliquid rerum praesentium.</p>
                  <a href="./pages/menu.html"><button class="order">Order Foods</button></a>
             </div>
         </div>
