--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,16 +2,18 @@
 <html>
 <head>
     <title>Contact</title>
+    <link rel="stylesheet" href="./../css/contact.css"/>
+    <link rel="stylesheet" href="./../css/style.css"/>
 </head>
 <body>
     <div>
-        <h1>
+        <h1 class="heading">
            <img src="./../Img/chef.png" height="100px"
            width="100px"> Kichen-Khavayye</h1>
-        <div>
-            <a href="./../index.html">Home</a>
-            <a href="./../pages/menu.html">menu</a>
-            <a href="./../pages/contact.html">contact</a>
+        <div class="just1">
+            <a href="./../index.html"><b>Home</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="./../pages/menu.html"><b>menu</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="./../pages/contact.html"><b>contact</b></a>
         </div>
         </div>
 </body>
