New Tags and New Lines Added

--- a/index.html
+++ b/index.html
@@ -17,17 +17,50 @@
         </div>
         </div>
         <br/><hr/>
+          <h1>Maharashtrian Foods........</h1>
         <div class="flexhome">
             <div>
                 <img src="./Img/photorealistic-lohri-festival-celebration-with-traditional-food.jpg"
-                   height="400px" width="800px" class="img"/>
+                   height="500px" width="1000px" class="img"/>
             </div>
             <div class="div">
                 <h2>Enjoy the foods.......<img src="./Img/delicious.png" height="70px" width="77px"/></h2>
-                <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis similique amet labore dolorum laborum, voluptates inventore consequatur molestiae veniam praesentium possimus corrupti sed quod dicta facilis. Ea aliquid rerum praesentium.</p>
+                <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis similique amet labore dolorum laborum, voluptates inventore consequatur molestiae veniam praesentium possimus corrupti sed quod dicta facilis. Ea aliquid rerum praesentium.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam veritatis voluptatum blanditiis consequuntur molestias quam est beatae cupiditate ea facilis sequi illum, quisquam rerum at id! Corrupti suscipit at provident.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium recusandae reiciendis iure. Excepturi architecto, nihil, dolores nulla quas recusandae quae minus repellat magni voluptatum earum porro! Quia perferendis in eligendi.
+                </p>
                  <a href="./pages/menu.html"><button class="order">Order Foods</button></a>
             </div>
+            <hr/><hr/>
         </div>
+        <div>
+            <h1>Best Dishes.....</h1>
+            <div class="best-card">
+                <img src="./Img/k7.png" class="food2-img"/>
+                <b>Vada-Pav</b>
+            </div>
+            <div class="best-card">
+                <img src="./Img/k8.png" class="food2-img"/>
+                <b>
+                 Bhakarwadi
+                </b>
+            </div>
+            <div class="best-card">
+                <img src="./Img/modak1.png" class="food2-img"/>
+                <b>
+                 Modak
+                </b>
+            </div><br/><a href="./pages/menu.html">Others dishes..to click here</a>
+     <hr/>
+     <div>
+        <h1>Best Quality</h1>
+     <img src="./Img/hand-sanitizer.png" class="img2"/>
+     <img src="./Img/delicious.png" class="img2"/>
+     <img src="./Img/star.png" class="img2"/>
+    </div>
+        &nbsp;&nbsp;1.hand-sanitizer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.delicious Foods&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.Best Ratings
+        <hr/>
+        <hr/>
 </body>
 </html>
     
