--- a/pages/menu.html
+++ b/pages/menu.html
@@ -9,13 +9,14 @@
     <div>
         <h1 class="heading">
            <img src="./../Img/chef.png" height="100px"
-           width="100px"> Kichen-Khavayye</h1>
+           width="100px"> Kichen-Khavayye</h1><br/></hr><hr/>
         <div class="just1">
             <a href="./../index.html"><b>Home</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="./../pages/menu.html"><b>menu</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="./../pages/contact.html"><b>contact</b></a>
         </div>
-        </div><div>
+        </div><br/><hr/>
+        <div>
             <h1>Menus.....</h1>
             <div class="menu-card">
                 <img src="./../Img/aamras.png" class="food-img"/>
