--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,12 +9,12 @@
     <div>
         <h1 class="heading">
            <img src="./../Img/chef.png" height="100px"
-           width="100px"> Kichen-Khavayye</h1>
+           width="100px"> Kichen-Khavayye</h1><br/><hr/>
         <div class="just1">
             <a href="./../index.html"><b>Home</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="./../pages/menu.html"><b>menu</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="./../pages/contact.html"><b>contact</b></a>
         </div>
-        </div>
+        </div><br/><hr/>
 </body>
 </html>
