contact page created

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div>
         <h1 class="heading">
            <img src="./img/chef.png" height="100px"
-           width="100px"> Kichen-Khavayye</h1><br/><hr/>
+           width="100px"> Kichen-Khayayye</h1><br/><hr/>
         <div class="just1">
             <a href="./index.html"><b>Home</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="./pages/menu.html"><b>menu</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -18,14 +18,14 @@
         </div>
         <br/><hr/>
           <h1>Maharashtrian Foods........</h1>
-        <div class="flexhome">
+        <div class="flexhome  div">
             <div>
                 <img src="./Img/photorealistic-lohri-festival-celebration-with-traditional-food.jpg"
                    height="500px" width="1000px" class="img"/>
             </div>
             <div class="div">
                 <h2>Enjoy the foods.......<img src="./Img/delicious.png" height="70px" width="77px"/></h2>
-                <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis similique amet labore dolorum laborum, voluptates inventore consequatur molestiae veniam praesentium possimus corrupti sed quod dicta facilis. Ea aliquid rerum praesentium.
+                <p class="paragraph paragraph-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis similique amet labore dolorum laborum, voluptates inventore consequatur molestiae veniam praesentium possimus corrupti sed quod dicta facilis. Ea aliquid rerum praesentium.
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam veritatis voluptatum blanditiis consequuntur molestias quam est beatae cupiditate ea facilis sequi illum, quisquam rerum at id! Corrupti suscipit at provident.
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium recusandae reiciendis iure. Excepturi architecto, nihil, dolores nulla quas recusandae quae minus repellat magni voluptatum earum porro! Quia perferendis in eligendi.
                 </p>
@@ -57,8 +57,9 @@
      <img src="./Img/hand-sanitizer.png" class="img2"/>
      <img src="./Img/delicious.png" class="img2"/>
      <img src="./Img/star.png" class="img2"/>
+     <img src="./Img/chef.png" class="img2"/>
     </div>
-        &nbsp;&nbsp;1.hand-sanitizer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.delicious Foods&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.Best Ratings
+        &nbsp;&nbsp;1.hand-sanitizer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.delicious Foods&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.Best Ratings&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4.Best cook
         <hr/>
         <hr/>
 </body>
