--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,6 +15,17 @@
             <a href="./../pages/menu.html"><b>menu</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="./../pages/contact.html"><b>contact</b></a>
         </div>
-        </div><br/><hr/>
+        </div>
+        <br/>
+        <hr/> 
+        <h1 class="heading">Contact Us.....</h1>
+         <div class="align call">
+            <img src="./../Img/call.png" class="img1"/>
+            <a href="tel:9359930107">Call us</a>
+            <img src="./../Img/mail.png"  class="img1"/>
+            <a href="mailto:dhumalpooja1204@gmail.com">Email Us</a>
+         </div>
+         <hr/>
+         <hr/>
 </body>
 </html>
