--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="best-card">
                 <img src="./Img/k8.png" class="food2-img"/>
                 <b>
-                 Bhakarwadi
+                 PavBhaji
                 </b>
             </div>
             <div class="best-card">
